修改原點樣式 應加輸入框提示

--- a/sass/page/_3dSurroundView.scss
+++ b/sass/page/_3dSurroundView.scss
@@ -50,7 +50,7 @@
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: #FFD60A;
+    background: #394897;
     opacity: .8;
 }
 
@@ -62,7 +62,7 @@
     position: absolute;
     /* .custom-hotspot */
     /* 同 .custom-hotspot */
-    background: #FFD60A;
+    background: #394897;
     width: 20px;
     height: 20px;
     border-radius: 50%;
