客服小修改

--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -49,7 +49,7 @@
                     </ul>
             </nav>
             <div class="copyright">
-                <p>本網站為緯育TibaMe_前端設計工程師班第73期第五組學員專題成果作品，本平台僅供學習、展示之用。<br>
+                <p>本網站為緯育TibaMe_前端設計工程師班第73期第二組學員專題成果作品，本平台僅供學習、展示之用。<br>
                 若有牴觸有關著作權，或有第三人主張侵害智慧財產權等情事，若有侵權疑慮，請私訊<a href="https://www.tibame.com/goodjob/frontend">TibaMe-前端設計工程師養成班</a>，後續由專人協助處理。</p>
                     
             </div>
