--- a/sass/layout/_supportChatroom.scss
+++ b/sass/layout/_supportChatroom.scss
@@ -104,7 +104,9 @@ $uiColor:(
             >img{
                 width: 2em;
                 cursor: pointer;
-                
+                // @media screen and (min-width:768px) {
+                //     width: 2em;
+                // }
             }
         }
         .selectBtn{
@@ -116,18 +118,21 @@ $uiColor:(
                 width: 50%;
                 font-size: 16px;
                 box-sizing: border-box;
-                padding: 2em 1em; 
+                padding: 1em 1em; 
                 cursor: pointer;
                 // justify-content: space-around;
                 img{
                     vertical-align: top;
                     // width: 50%;
-                    width: 20%;
+                    width: 60px;
                     box-sizing: border-box;
                     border-radius: 50%;
                     aspect-ratio: 1/1;
                     padding: 0.5em;
                     margin-bottom: 0.5em;
+                    @media screen and (min-width:768px) {
+                        width: 60px;
+                    }
                 }
             }
         }
