--- a/sass/page/_login.scss
+++ b/sass/page/_login.scss
@@ -48,22 +48,12 @@
                 bottom: 0;
             }
             >form{
-                // z-index: 0;
-                // transition: z-index 0.3s 0.2s ;
+                
                 input:not([type*="submit"]){
                     /* 登入註冊區輸入框 */
-                    
                     display: block;
-                    // font-size: 1em;
-                    // border-radius: 200px;
-                    // box-sizing: border-box;
-                    // padding: 0.5em 1em;
-                    // border:none;
-                    // box-shadow: -1px -1px 2px 0px #ffffff inset,1px 1px 3px 0px #aaaaaaaa inset;
                     margin: 0px 0px 20px 0px;
                     width: 80%;
-                    // line-height: 2em;
-                    // background-color: transparent;
                     @media screen and (min-width:768px) {
                         width: 60%;
                     }
@@ -96,6 +86,29 @@
                 align-items: center;
                 justify-content: center;
                 height: 100%;
+                width: 100%;
+            }
+            >form:last-of-type{
+                // 註冊輸入框區
+                width: 100%;
+                // flex-direction: row;
+                // >div{
+                //     height: 100%;
+                //     width: 200%;
+                //     display: flex;
+                //     flex-wrap: wrap;
+                //     >div{
+                //         height: 100%;
+                //         width: 100%;
+                //         display: flex;
+                //         flex-direction: column;
+                //         align-items: center;
+                //         justify-content: center;
+                //     }
+                //     >div:first-of-type{
+                        
+                //     }
+                // }
             }
         }
         >article:first-of-type{
