會員管理 左邊borde

--- a/sass/page/_accountManagement.scss
+++ b/sass/page/_accountManagement.scss
@@ -31,7 +31,7 @@
         margin-top: 1em;
         padding-left: 1em;
         line-height: 2;
-        border-left: 3px solid #141414;
+        // border-left: 3px solid #141414;
         color: #141414;
         display: flex;
         justify-content: space-between;
