--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -180,6 +180,9 @@ header{
     margin: 0 5px;
     cursor: pointer;
 }
+.headerContain .noticeHeader:hover{
+    filter: brightness(0.9);
+}
 .headerContain .noticeHeader .notice_dot{
     // 定位在.noticeHeader
     position: absolute;
