--- a/sass/layout/_headerNormal.scss
+++ b/sass/layout/_headerNormal.scss
@@ -71,6 +71,9 @@ header{
     margin: 0 5px;
     cursor: pointer;
 }
+.headerNormalContain .noticeHeader:hover{
+    filter: brightness(0.9);
+}
 .headerNormalContain .noticeHeader .notice_dot{
     // 定位在.noticeHeader
     position: absolute;
