--- a/sass/page/_product.scss
+++ b/sass/page/_product.scss
@@ -137,12 +137,12 @@
     vertical-align: bottom;
     transition: .3s;
 }
-// hover愛心換顏色
-.productMainSection .commomItem .like .pic img:hover{
-    content: url(../image/all_like_hover.png);
-    transform: scale(1.02);
-    vertical-align: bottom;
-}
+// // hover愛心換顏色
+// .productMainSection .commomItem .like .pic img:hover{
+//     content: url(../image/all_like_hover.png);
+//     transform: scale(1.02);
+//     vertical-align: bottom;
+// }
 // 點擊收藏變愛心
 .productMainSection .commomItem .like .pic img.active{
     content: url(../image/all_like_hover.png);
