--- a/sass/page/_login.scss
+++ b/sass/page/_login.scss
@@ -79,7 +79,7 @@
                 }
 
             }
-            >form,>article{
+            >form:first-of-type,>article{
                 /* 選取登入區、註冊區和兩個切換區 */
                 display: flex;
                 flex-direction: column;
@@ -92,23 +92,28 @@
                 // 註冊輸入框區
                 width: 100%;
                 // flex-direction: row;
-                // >div{
-                //     height: 100%;
-                //     width: 200%;
-                //     display: flex;
-                //     flex-wrap: wrap;
-                //     >div{
-                //         height: 100%;
-                //         width: 100%;
-                //         display: flex;
-                //         flex-direction: column;
-                //         align-items: center;
-                //         justify-content: center;
-                //     }
-                //     >div:first-of-type{
+                height: 100%;
+                overflow: hidden;
+                >div{
+                    height: 100%;
+                    width: 200%;
+                    display: flex;
+                    align-items: center;
+                    flex-direction: row;
+                    margin-left: -100%;
+                    >div{
+                        box-sizing: border-box;
+                        height: 100%;
+                        width: 100%;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                    >div:first-of-type{
                         
-                //     }
-                // }
+                    }
+                }
             }
         }
         >article:first-of-type{
