--- a/sass/page/_login.scss
+++ b/sass/page/_login.scss
@@ -99,7 +99,7 @@
                     width: 200%;
                     display: flex;
                     align-items: center;
-                    flex-direction: row;
+                    flex-direction: row-reverse;
                     margin-left: -100%;
                     >div{
                         box-sizing: border-box;
