--- a/html/layout/header.html
+++ b/html/layout/header.html
@@ -32,11 +32,11 @@
                             </b>
                         </label>
                         <ul>
-                            <li><a href="galleryAll/gallery/gallery.html" class="lightColor">展示區</a></li>
-                            <li><a href="galleryAll/gallery/gallery.html" class="lightColor">雕塑類</a></li>
-                            <li><a href="galleryAll/gallery/gallery.html" class="lightColor">畫作類</a></li>
-                            <li><a href="galleryAll/gallery/gallery.html" class="lightColor">公仔類</a></li>
-                            <li><a href="galleryAll/gallery/gallery.html" class="lightColor">品牌合作</a></li>
+                            <li><a href="gallery.html" class="lightColor">展示區</a></li>
+                            <li><a href="gallery.html" class="lightColor">雕塑類</a></li>
+                            <li><a href="gallery.html" class="lightColor">畫作類</a></li>
+                            <li><a href="gallery.html" class="lightColor">公仔類</a></li>
+                            <li><a href="gallery.html" class="lightColor">品牌合作</a></li>
                         </ul>
                     </li>
                     <li style="--animation-order: 3;" >
