--- a/sass/page/_accountManagement.scss
+++ b/sass/page/_accountManagement.scss
@@ -47,22 +47,62 @@
         display: flex;
         align-items: flex-end;
     }
-
+    .accountManagement_bouncing main .characterAdjustment { /* 裁切圖中黃色部分 */
+        position: relative;
+        bottom: -10px;
+    }
     .accountManagement_bouncing main .characterAdjustment_box {
         width: 50%;
         margin-bottom: -2em;
     }
-    
     .question {
         display: flex;
         justify-content: flex-end;
     }
-    
     .fa-question {
         border-radius: 50%;
-        padding: 8px 10px;
+        padding: 4px 6px;
+        font-size: 8px;
         border: 1px solid #000;
     }
+
+    /* 提示視窗 */
+    .promptWindow-main{
+        position: relative;
+    }
+    .promptWindow{
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: inherit;
+        height: inherit;
+    }
+    .promptWindow::before{
+        content: '';
+        display: block;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 15px 26.0px 15px 0;
+        border-color: transparent #ccc transparent transparent;
+        position: absolute; /* .promptWindow */
+        left: 40px;
+    }
+    .promptWindow::after{
+        content: '此圖示為客製化人物的虛擬意象，請至客製化人物燈箱修改';
+        display: block;
+        position: absolute; /* .promptWindow */
+        color: #666;
+        background-color: #ccc;
+        top: -120px;
+        left: 60px;
+        width: 100px;
+
+        padding: 10px;
+        border-radius: 10px;
+    }
+
     /* input */
     
     .accountManagement_bouncing main .changeValue {
