--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,8 @@
 
 //商品刊登
 @import 'page/listing';
-//藝廊
+//藝廊入口
 @import 'page/galleryDoor';
+//藝廊內
+@import 'page/gallery';
 @import 'layout/galleryBounceDoll';
