--- a/sass/page/_consumptionRecord.scss
+++ b/sass/page/_consumptionRecord.scss
@@ -74,6 +74,7 @@
     align-items: flex-end;
 }
 
+/*
 .consumptionRecord_bouncing main::-webkit-scrollbar {
     width: 16px;
 }
@@ -87,6 +88,7 @@
     background-color: #FFD60A;
     border-radius: 100px;
 }
+*/
 
 @media(min-width:769px) {
     .consumptionRecord_bouncing main .record .recordGraphics,
