--- a/sass/page/_about.scss
+++ b/sass/page/_about.scss
@@ -39,7 +39,7 @@
             width: 100%;
             height: 2.5em;
             display: inline-block;
-            background: url(../../assets/image/texture.jpeg);
+            background: url(../../assets/image/texture.jpg);
             position: relative;
             top: 0em;
             left: 0;
@@ -49,8 +49,8 @@
             width: 100%;
             height: 4em;
             display: inline-block;
-            background: url(../../assets/image/texture.jpeg);
-            opacity: 0.5;
+            background: url(../../assets/image/texture.jpg);
+            opacity: 0.8;
             -webkit-transform: scaleY(1.3) perspective(1em) rotateX(1deg);
             transform: scaleY(1.3) perspective(1em) rotateX(1deg);
             -webkit-transform-origin: bottom;
