--- a/sass/page/_about.scss
+++ b/sass/page/_about.scss
@@ -1,8 +1,27 @@
 .aboutMain{
     .backToTop{
-        text-align: center;
-        padding: 0 0 3em 0;
+        position: fixed;
+        left: 15%;
+        bottom: 30%;
+        text-align: left;
         cursor: pointer;
+        display: inline-block;
+        width: 3em;
+        height: 3em;
+        background-color: #394897;
+        border-radius: 0.5em;
+        opacity: 1;
+        transition: opacity 1s 0.5s;
+
+        p{
+            line-height: 3em;
+            text-align: center;
+            color: #ffffff;
+        }
+    }
+    .backToTopNone{
+        opacity: 0;
+        transition: opacity 0.5s;
     }
     .pic{
         width: 100%;
@@ -34,7 +53,7 @@
 
     .introduceCardWrap{
         margin: auto;
-        // 書櫃
+        // 書櫃 
         .bookshelf{
             width: 100%;
             height: 2.5em;
@@ -107,6 +126,9 @@
 /*手機專用*/
 @media screen and (max-width: 767px) {
     .aboutMain{
+        .backToTop{
+            left: 5%;
+        }
         .introduceCardWrapPC{
             display: none;
         }
